<resources>
    <string name="app_name">Advanced Search</string>
    <string name="search">Search</string>
    <string name="search_results">Search Results</string>
    <string name="no_results_found">No results found</string>
    <string name="no_search_term">No search term present</string>
    <string name="apply_to_search">Press Apply to refresh the view</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="results_while_searching_for">Results while searching for expression \"%1$s\" %2$s</string>
    <string name="results_while_searching">Results while searching %1$s</string>
    <plurals name="results_for_this_query">
        <item quantity="one" formatted="true">%1$d result found for this query</item>
        <item quantity="other" formatted="true">%1$d results found for this query</item>
    </plurals>
    <string name="advanced">Advanced</string>
</resources>
